--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ permalink: /
     <div class="row">
       <div class="col-md-10 col-md-offset-2">
         <div class="block">
-          <h1 class="animated fadeInUp">DevSecOps </...> <br> 快速、安全地构建应用程序基础设施。</h1>
+          <h1 class="animated fadeInUp">DevSecOps | <br> 快速、安全地构建应用程序基础设施。</h1>
           <p class="animated fadeInUp">We love the Web and the work we do.We work closely with our </br> clients to deliver the best possible solutions for their needs</p>
         </div>
       </div>
