--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ permalink: /
       <div class="col-md-10 col-md-offset-2">
         <div class="block">
           <h1 class="animated fadeInUp">DevSecOps | <br> 快速、安全地构建应用程序基础设施。</h1>
-          <p class="animated fadeInUp">简化更多繁琐且不安全的构建过程， </br> 自动化、安全化这所有的一切。</p>
+          <p class="animated fadeInUp">简化更多繁琐且不安全的构建过程，自动化、安全化这所有的一切。</p>
         </div>
       </div>
     </div>
