--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ permalink: /
       <div class="col-sm-6 col-md-3">
         <div class="service-item">
           <i class="ion-leaf"></i>
-          <h4>Development</h4>
+          <h4>开发</h4>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut </p>
         </div>
       </div>
@@ -141,7 +141,7 @@ permalink: /
   <div class="container">
     <div class="row">
       <div class="section-title text-center">
-        <h2>Fun Facts About Us</h2>
+        <h2>我们的经历</h2>
         <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
       </div>
     </div>
