--- a/index.html
+++ b/index.html
@@ -73,22 +73,22 @@ permalink: /
       <div class="col-sm-6 col-md-3">
         <div class="service-item">
           <i class="ion-compass"></i>
-          <h4>Web Design</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut </p>
+          <h4>自动化</h4>
+          <p>自动化这所有的一切 </p>
         </div>
       </div>
       <div class="col-sm-6 col-md-3">
         <div class="service-item">
           <i class="ion-image"></i>
-          <h4>App Design</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut </p>
+          <h4>图形化</h4>
+          <p>眼见为实，一切动态净收眼底 </p>
         </div>
       </div>
       <div class="col-sm-6 col-md-3">
         <div class="service-item">
           <i class="ion-bug"></i>
-          <h4>Start Up</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut </p>
+          <h4>快速启动</h4>
+          <p>快速启动构建出更安全的应用程序基础设施 </p>
         </div>
       </div>
       <div class="col-sm-6 col-md-3">
