--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@ permalink: /
       <div class="col-sm-6 col-md-3">
         <div class="service-item">
           <i class="ion-bug"></i>
-          <h4>快速启动</h4>
-          <p>快速启动构建出更安全的应用程序基础设施 </p>
+          <h4>快速构建</h4>
+          <p>快速构建出更安全的应用程序基础设施 </p>
         </div>
       </div>
       <div class="col-sm-6 col-md-3">
