--- a/index.html
+++ b/index.html
@@ -74,21 +74,21 @@ permalink: /
         <div class="service-item">
           <i class="ion-compass"></i>
           <h4>自动化</h4>
-          <p>自动化这所有的一切 </p>
+          <p>自动化这所有的一切</p>
         </div>
       </div>
       <div class="col-sm-6 col-md-3">
         <div class="service-item">
           <i class="ion-image"></i>
           <h4>图形化</h4>
-          <p>眼见为实，一切动态净收眼底 </p>
+          <p>眼见为实，数据动态净收眼底</p>
         </div>
       </div>
       <div class="col-sm-6 col-md-3">
         <div class="service-item">
           <i class="ion-bug"></i>
           <h4>快速构建</h4>
-          <p>快速构建出更安全的应用程序基础设施 </p>
+          <p>快速构建出更安全的应用程序基础设施</p>
         </div>
       </div>
       <div class="col-sm-6 col-md-3">
