--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ permalink: /
         <div class="service-item">
           <i class="ion-bug"></i>
           <h4>快速构建</h4>
-          <p>快速构建出更安全的应用程序基础设施</p>
+          <p>快速构建更安全的应用程序基础设施</p>
         </div>
       </div>
       <div class="col-sm-6 col-md-3">
