--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@ permalink: /
       <div class="col-sm-6 col-md-3">
         <div class="service-item">
           <i class="icon ion-coffee"></i>
-          <h4>Branding</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut </p>
+          <h4>安全化</h4>
+          <p>安全化应用程序基础设施</p>
         </div>
       </div>
       <div class="col-sm-6 col-md-3">
@@ -88,7 +88,7 @@ permalink: /
         <div class="service-item">
           <i class="ion-bug"></i>
           <h4>快速构建</h4>
-          <p>快速构建更安全的应用程序基础设施</p>
+          <p>快速构建应用程序基础设施</p>
         </div>
       </div>
       <div class="col-sm-6 col-md-3">
