--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ permalink: /
     <div class="row">
       <div class="section-title">
         <h2>服务</h2>
-        <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
+        <p>我们提供更好的服务</p>
       </div>
     </div>
     <div class="row ">
