--- a/contact.html
+++ b/contact.html
@@ -65,25 +65,25 @@ permalink: /contact/
 
           <ul class="social-icons">
             <li>
-              <a href="http://www.themefisher.com"><i class="fa fa-google"></i></a>
+              <a href="https://github.com/opsforce"><i class="fa fa-github"></i></a>
             </li>
             <li>
-              <a href="http://www.themefisher.com"><i class="fa fa-linkedin"></i></a>
+              <a href="http://www.opsforce.com"><i class="fa fa-linkedin"></i></a>
             </li>
             <li>
-              <a href="http://www.themefisher.com"><i class="fa fa-pinterest"></i></a>
+              <a href="http://www.opsforce.com"><i class="fa fa-instagram"></i></a>
             </li>
             <li>
-              <a href="http://www.themefisher.com"><i class="fa fa-dribbble"></i></a>
+              <a href="https://dribbble.com/opsforce"><i class="fa fa-dribbble"></i></a>
             </li>
             <li>
-              <a href="http://www.themefisher.com"><i class="fa fa-behance"></i></a>
+              <a href="http://www.opsforce.com"><i class="fa fa-behance"></i></a>
             </li>
             <li>
-              <a href="http://www.themefisher.com"><i class="fa fa-twitter"></i></a>
+              <a href="http://www.opsforce.com"><i class="fa fa-twitter"></i></a>
             </li>
             <li>
-              <a href="http://www.themefisher.com"><i class="fa fa-facebook"></i></a>
+              <a href="http://www.opsforce.com"><i class="fa fa-facebook"></i></a>
             </li>
           </ul>
         </div>
