--- a/contact.html
+++ b/contact.html
@@ -68,22 +68,13 @@ permalink: /contact/
               <a href="https://github.com/opsforce"><i class="fa fa-github"></i></a>
             </li>
             <li>
-              <a href="http://www.opsforce.com"><i class="fa fa-linkedin"></i></a>
+              <a href="http://www.linkedin.com/in/ming-jao-19b40b5a/"><i class="fa fa-linkedin"></i></a>
             </li>
             <li>
-              <a href="http://www.opsforce.com"><i class="fa fa-instagram"></i></a>
+              <a href="https://www.instagram.com/opsforce"><i class="fa fa-instagram"></i></a>
             </li>
             <li>
               <a href="https://dribbble.com/opsforce"><i class="fa fa-dribbble"></i></a>
-            </li>
-            <li>
-              <a href="http://www.opsforce.com"><i class="fa fa-behance"></i></a>
-            </li>
-            <li>
-              <a href="http://www.opsforce.com"><i class="fa fa-twitter"></i></a>
-            </li>
-            <li>
-              <a href="http://www.opsforce.com"><i class="fa fa-facebook"></i></a>
             </li>
           </ul>
         </div>
