--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@ permalink: /contact/
     <div class="row">
       <div class="col-md-12">
         <div class="block">
-          <h1>Drop Us A Note</h1>
+          <h1>Drop Us A EMail</h1>
           <p>Don’t just take our word for it. Check out some of our latest work.</p>
         </div>
       </div>
