--- a/index.html
+++ b/index.html
@@ -86,7 +86,35 @@ permalink: /
       </div>
       <div class="col-sm-6 col-md-3">
         <div class="service-item">
-          <i class="ion-bug"></i>
+          <i class="ion-steam"></i>
+          <h4>快速构建</h4>
+          <p>快速构建应用程序基础设施</p>
+        </div>
+      </div>
+      <div class="col-sm-6 col-md-3">
+        <div class="service-item">
+          <i class="ion-social-buffer"></i>
+          <h4>Docker</h4>
+          <p>开源的应用容器引擎</p>
+        </div>
+      </div>
+      <div class="col-sm-6 col-md-3">
+        <div class="service-item">
+          <i class="ion-steam"></i>
+          <h4>快速构建</h4>
+          <p>快速构建应用程序基础设施</p>
+        </div>
+      </div>
+      <div class="col-sm-6 col-md-3">
+        <div class="service-item">
+          <i class="ion-steam"></i>
+          <h4>快速构建</h4>
+          <p>快速构建应用程序基础设施</p>
+        </div>
+      </div>
+      <div class="col-sm-6 col-md-3">
+        <div class="service-item">
+          <i class="ion-steam"></i>
           <h4>快速构建</h4>
           <p>快速构建应用程序基础设施</p>
         </div>
