--- a/index.html
+++ b/index.html
@@ -100,16 +100,16 @@ permalink: /
       </div>
       <div class="col-sm-6 col-md-3">
         <div class="service-item">
-          <i class="ion-steam"></i>
-          <h4>快速构建</h4>
-          <p>快速构建应用程序基础设施</p>
+          <i class="ion-code"></i>
+          <h4>CI/CD</h4>
+          <p>持续集成、持续交付</p>
         </div>
       </div>
       <div class="col-sm-6 col-md-3">
         <div class="service-item">
-          <i class="ion-steam"></i>
-          <h4>快速构建</h4>
-          <p>快速构建应用程序基础设施</p>
+          <i class="ion-android-cloud-done"></i>
+          <h4>迁云</h4>
+          <p>项目迁移到云服务</p>
         </div>
       </div>
       <div class="col-sm-6 col-md-3">
