--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ permalink: /
       <p>企业级CI/CD方案，快速完成源码构建、镜像打包、应用部署</p>
       <p>实现企业级高效的代码构建、灵活的测试管理、便利的版本上线和升级回滚</p>
       <p>完成企业高效运营</p>
-      <a href="#" class="btn btn-view-works">我们的工作</a>
+      <a href="{{ site.baseurl }}/work" class="btn btn-view-works">我们的工作</a>
     </div>
   </div>
 </div>
