--- a/index.html
+++ b/index.html
@@ -128,9 +128,8 @@ permalink: /
     <div class="row">
       <div class="col-md-12">
         <div class="block">
-          <h2>We design delightful digital experiences.</h2>
-          <p>Read more about what we do and our philosophy of design. Judge for yourself The work and results we’ve achieved for other clients, and meet our highly experienced Team who just love to design.</p>
-          <a class="btn btn-default btn-call-to-action" href="#" >Tell Us Your Story</a>
+          <h2>获取DevSecOps解决方案</h2>
+          <a class="btn btn-default btn-call-to-action" href="{{ site.baseurl }}/contact" >赶紧联系我们吧</a>
         </div>
       </div>
     </div>
