--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ permalink: /
   <div class="container">
     <div class="row">
       <div class="section-title text-center">
-        <h2>优势</h2>
+        <h2>历程</h2>
       </div>
     </div>
     <div class="row">
@@ -148,29 +148,29 @@ permalink: /
             <li>
               <div class="block">
                 <i class="ion-ios-chatboxes-outline"></i>
-                <h4 class="counter">20000</h4>
-                <span>Cups Of Coffee</span>
+                <h4 class="counter">10+</h4>
+                <span>有意义的讨论</span>
               </div>
             </li>
             <li>
               <div class="block">
                 <i class="ion-ios-glasses-outline"></i>
-                <h4 class="counter">20000</h4>
-                <span>Cups Of Coffee</span>
+                <h4 class="counter">200+</h4>
+                <span>省察</span>
               </div>
             </li>
             <li>
               <div class="block">
                 <i class="ion-ios-compose-outline"></i>
-                <h4 class="counter">20000</h4>
-                <span>Cups Of Coffee</span>
+                <h4 class="counter">10000+</h4>
+                <span>代码量</span>
               </div>
             </li>
             <li>
               <div class="block">
                 <i class="ion-ios-timer-outline"></i>
-                <h4 class="counter">20000</h4>
-                <span>Cups Of Coffee</span>
+                <h4 class="counter">500+</h4>
+                <span>历时</span>
               </div>
             </li>
 
