--- a/index.html
+++ b/index.html
@@ -148,28 +148,28 @@ permalink: /
             <li>
               <div class="block">
                 <i class="ion-ios-chatboxes-outline"></i>
-                <h4 class="counter">10+</h4>
+                <h4 class="counter">10</h4>
                 <span>有意义的讨论</span>
               </div>
             </li>
             <li>
               <div class="block">
                 <i class="ion-ios-glasses-outline"></i>
-                <h4 class="counter">200+</h4>
+                <h4 class="counter">200</h4>
                 <span>省察</span>
               </div>
             </li>
             <li>
               <div class="block">
                 <i class="ion-ios-compose-outline"></i>
-                <h4 class="counter">10000+</h4>
+                <h4 class="counter">10000</h4>
                 <span>代码量</span>
               </div>
             </li>
             <li>
               <div class="block">
                 <i class="ion-ios-timer-outline"></i>
-                <h4 class="counter">500+</h4>
+                <h4 class="counter">500</h4>
                 <span>历时</span>
               </div>
             </li>
