--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ permalink: /
                 <img src="img/cotation.png" alt="IMG">
                 <p>"运维自动化，一切工作交给机器。"</p>
                 <div class="user">
-                  <img src="img/item-img1.jpg" alt="Pepole">
+                  <img src="favicon.png" alt="Pepole">
                   <p><span>ming jao</span>TEAM Leader</p>
                 </div>
             </div>
