update work to projects

--- a/projects.html
+++ b/projects.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Our Work
-permalink: /work/
+permalink: /projects/
 ---
 
     <!-- Slider Start -->
@@ -18,7 +18,7 @@ permalink: /work/
     </div>
 </section>
     <!-- Portfolio Start -->
-<section id="portfolio-work">
+<section id="portfolio-projects">
     <div class="container">
         <div class="row">
           <div class="col-md-12">
