--- a/projects.html
+++ b/projects.html
@@ -25,17 +25,17 @@ permalink: /projects/
             <div class="block">
               <div class="portfolio-menu">
                 <ul>
-                    <li class="filter" data-filter="all">Everything</li>
-                    <li class="filter" data-filter=".Branding">Branding</li>
-                    <li class="filter" data-filter=".Websites">Websites</li>
-                    <li class="filter" data-filter=".Graphic">Graphic</li>
-                    <li class="filter" data-filter=".design">design</li>
-                    <li class="filter" data-filter=".Video">Video</li>
+                    <li class="filter" data-filter="all">所有</li>
+                    <li class="filter" data-filter=".CICD">CI/CD</li>
+                    <li class="filter" data-filter=".Kubernetes-Swarm">Kubernetes/Swarm</li>
+                    <li class="filter" data-filter=".Docker">Docker</li>
+                    <li class="filter" data-filter=".Auto">自动化</li>
+                    <li class="filter" data-filter=".Monitor">监控</li>
                 </ul>
               </div>
               <div class="portfolio-contant">
                 <ul id="portfolio-contant-active">
-                    <li class="mix Branding">
+                    <li class="mix CICD">
                       <a href="#">
                         <img src="{{ site.baseurl }}/img/portfolio/work1.jpg" alt="">
                         <div class="overly">
@@ -47,7 +47,7 @@ permalink: /projects/
                         </div>
                       </a>
                   </li>
-                  <li class="mix Websites">
+                  <li class="mix Docker">
                     <a href="#">
                       <img src="{{ site.baseurl }}/img/portfolio/work2.jpg" alt="">
                       <div class="overly">
@@ -59,7 +59,7 @@ permalink: /projects/
                       </div>
                     </a>
                   </li>
-                  <li class="mix Graphic">
+                  <li class="mix Monitor">
                     <a href="#">
                       <img src="{{ site.baseurl }}/img/portfolio/work3.jpg" alt="">
                       <div class="overly">
@@ -72,7 +72,7 @@ permalink: /projects/
 
                     </a>
                   </li>
-                  <li class="mix design">
+                  <li class="mix Kubernetes-Swarm">
                     <a href="#">
                       <img src="{{ site.baseurl }}/img/portfolio/work4.jpg" alt="">
                       <div class="overly">
@@ -84,7 +84,7 @@ permalink: /projects/
                       </div>
                     </a>
                   </li>
-                  <li class="mix Video">
+                  <li class="mix Auto">
                     <a href="#">
                       <img src="{{ site.baseurl }}/img/portfolio/work5.jpg" alt="">
                       <div class="overly">
@@ -96,7 +96,7 @@ permalink: /projects/
                       </div>
                     </a>
                   </li>
-                  <li class="mix Graphic">
+                  <li class="mix Monitor">
                     <a href="#">
                       <img src="{{ site.baseurl }}/img/portfolio/work6.jpg" alt="">
                       <div class="overly">
@@ -173,8 +173,8 @@ permalink: /projects/
     <div class="row">
       <div class="col-md-12">
         <div class="block">
-          <h2>We design delightful digital experiences.</h2>
-          <p>Read more about what we do and our philosophy of design. Judge for yourself The work and results we’ve achieved for other clients, and meet our highly experienced Team who just love to design.</p>
+          <h2>We Kubernetes-Swarm delightful digital experiences.</h2>
+          <p>Read more about what we do and our philosophy of Kubernetes-Swarm. Judge for yourself The work and results we’ve achieved for other clients, and meet our highly experienced Team who just love to Kubernetes-Swarm.</p>
           <a class="btn btn-default btn-call-to-action" href="#" >Tell Us Your Story</a>
         </div>
       </div>
