update contact to about

--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: Contact us!
-permalink: /contact/
+title: About | OPSFORCE.
+permalink: /about/
 ---
 
 <!-- Slider Start -->
