--- a/projects.html
+++ b/projects.html
@@ -40,9 +40,7 @@ permalink: /projects/
                         <img src="{{ site.baseurl }}/img/portfolio/work1.jpg" alt="">
                         <div class="overly">
                           <div class="position-center">
-                            <h2>Tesla Motors</h2>
-                            <p>Labore et dolore magna aliqua. Ut enim ad </p>
-
+                            <h2>Kubernetes</h2>
                           </div>
                         </div>
                       </a>
