--- a/projects.html
+++ b/projects.html
@@ -41,6 +41,7 @@ permalink: /projects/
                         <div class="overly">
                           <div class="position-center">
                             <h2>Kubernetes</h2>
+                            <p>Labore et dolore magna aliqua. Ut enim ad </p>
 
                           </div>
                         </div>
