--- a/projects.html
+++ b/projects.html
@@ -41,7 +41,7 @@ permalink: /projects/
                         <div class="overly">
                           <div class="position-center">
                             <h2>Kubernetes</h2>
-                            <p>an open-source system of google for automating deployment, scaling, and management of containerized applications.</p>
+                            <p>one open-source system of google for automating deployment, scaling, and management of containerized applications.</p>
 
                           </div>
                         </div>
