--- a/projects.html
+++ b/projects.html
@@ -24,7 +24,7 @@ permalink: /projects/
             <div class="block">
               <div class="portfolio-contant">
                 <ul id="portfolio-contant-active">
-                    <li class="mix CICD">
+                    <li class="mix Kubernetes">
                       <a href="#">
                         <img src="{{ site.baseurl }}/img/portfolio/work1.jpg" alt="">
                         <div class="overly">
@@ -54,14 +54,14 @@ permalink: /projects/
                       <div class="overly">
                         <div class="position-center">
                           <h2>Zabbix</h2>
-                          <p>Labore et dolore magna aliqua. Ut enim ad </p>
+                          <p>The Enterprise-class Monitoring Solution for Everyone</p>
 
                         </div>
                       </div>
 
                     </a>
                   </li>
-                  <li class="mix Kubernetes-Swarm">
+                  <li class="mix Jenkins">
                     <a href="#">
                       <img src="{{ site.baseurl }}/img/portfolio/work4.jpg" alt="">
                       <div class="overly">
@@ -73,7 +73,7 @@ permalink: /projects/
                       </div>
                     </a>
                   </li>
-                  <li class="mix Auto">
+                  <li class="mix Ansible">
                     <a href="#">
                       <img src="{{ site.baseurl }}/img/portfolio/work5.jpg" alt="">
                       <div class="overly">
@@ -85,7 +85,7 @@ permalink: /projects/
                       </div>
                     </a>
                   </li>
-                  <li class="mix Monitor">
+                  <li class="mix More">
                     <a href="#">
                       <img src="{{ site.baseurl }}/img/portfolio/work6.jpg" alt="">
                       <div class="overly">
