--- a/projects.html
+++ b/projects.html
@@ -66,8 +66,8 @@ permalink: /projects/
                       <img src="{{ site.baseurl }}/img/portfolio/work4.jpg" alt="">
                       <div class="overly">
                         <div class="position-center">
-                          <h2>Tesla Motors</h2>
-                          <p>Labore et dolore magna aliqua. Ut enim ad </p>
+                          <h2>Jenkins</h2>
+                          <p>Build great things at any scale. The leading open source automation server, Jenkins provides hundreds of plugins to support building, deploying and automating any project.</p>
 
                         </div>
                       </div>
