--- a/projects.html
+++ b/projects.html
@@ -78,8 +78,8 @@ permalink: /projects/
                       <img src="{{ site.baseurl }}/img/portfolio/work5.jpg" alt="">
                       <div class="overly">
                         <div class="position-center">
-                          <h2>Tesla Motors</h2>
-                          <p>Labore et dolore magna aliqua. Ut enim ad </p>
+                          <h2>Ansible</h2>
+                          <p>AUTOMATION FOR EVERYONE. Ansible is designed around the way people work and the way people work together.</p>
 
                         </div>
                       </div>
@@ -90,8 +90,8 @@ permalink: /projects/
                       <img src="{{ site.baseurl }}/img/portfolio/work6.jpg" alt="">
                       <div class="overly">
                         <div class="position-center">
-                          <h2>Tesla Motors</h2>
-                          <p>Labore et dolore magna aliqua. Ut enim ad </p>
+                          <h2>More...</h2>
+                          <p>More...</p>
 
                         </div>
                       </div>
